--- a/public/locales/tr/translation.json
+++ b/public/locales/tr/translation.json
@@ -121,7 +121,7 @@
   "mission_title_3": "İstisnai profesyonelleri çekeceğiz, geliştireceğiz ve tutacağız:",
   "referrals": "Yönlendirmeler",
   "accept_t_c": "Onay kutusuna tıklayarak şartlar ve koşullarımızı kabul edersiniz",
-  "r_g_body": "ZIPO AID Invesments Limited yalnızca Site üyeleri için kullanılabilir. Bu siteye katılmak için ülkenizde yasal yaşta olmayı kabul edersiniz ve her durumda asgari yaşınızın 18 yıl olması gerekir. Her depozito Zipo Aid Investmentstmentstments Limited ve üyesi arasında özel bir işlem olarak kabul edilir.",
+  "r_g_body": "ZIPO AID Invesments Limited yalnızca Site üyeleri için kullanılabilir. Bu siteye katılmak için ülkenizde yasal yaşta olmayı kabul edersiniz ve her durumda asgari yaşınızın 18 yıl olması gerekir. Her depozito Zipo Aid Investments Limited ve üyesi arasında özel bir işlem olarak kabul edilir.",
   "status": "Durum",
   "t_c_caption": "Bu web sitesini kullanırken, aşağıdaki şartlar ve koşulları okuduğunuz ve kabul etmiş olduğunuzu kabul edersiniz:",
   "investment": "Aktif yatırım",
@@ -132,7 +132,7 @@
   "apis": "Bir dizi güçlü API",
   "complete_form": "Lütfen formu doldurun",
   "legal": "Yasal",
-  "guidance_body": "Ticaret yüksek bir risk taşır ve tüm yatırımcılar için uygun olmayabilir. Zipo Aid Investmentstmentstmentstmentstmentstmentstmentstmentstmentstmentstmentstmentstmentstmentstmentstmentstmentstmentstmentstmentstmentstmentstmentstmentstments Limited'e yatırım yapmaya karar vermeden önce, finansal durumunuzu ve deneyim seviyenizi dikkatlice düşünmelisiniz. Ticaretle ilgili tüm risklerin farkında olmalısınız ve herhangi bir şüpheniz varsa bağımsız bir finansal danışmandan tavsiye almalısınız. İlk yatırımınızın bir kısmını veya tamamını kaybedebileceğiniz olasılık vardır ve bu nedenle kaybetmeyi göze alamayacağınız para yatırmamalısınız. Kendi sorumluluğunuzda yatırım yapıyorsunuz ve geçmiş bir performansın aynı gelecekteki performans için bir garanti olmadığını kabul ediyorsunuz.",
+  "guidance_body": "Ticaret yüksek bir risk taşır ve tüm yatırımcılar için uygun olmayabilir. Zipo Aid Investments Limited'e yatırım yapmaya karar vermeden önce, finansal durumunuzu ve deneyim seviyenizi dikkatlice düşünmelisiniz. Ticaretle ilgili tüm risklerin farkında olmalısınız ve herhangi bir şüpheniz varsa bağımsız bir finansal danışmandan tavsiye almalısınız. İlk yatırımınızın bir kısmını veya tamamını kaybedebileceğiniz olasılık vardır ve bu nedenle kaybetmeyi göze alamayacağınız para yatırmamalısınız. Kendi sorumluluğunuzda yatırım yapıyorsunuz ve geçmiş bir performansın aynı gelecekteki performans için bir garanti olmadığını kabul ediyorsunuz.",
   "reliable_3": "Endüstri lideri çalışma süresi",
   "steps_1": "1. Hesap Oluştur",
   "protrading_vip": "Profesyonel ticaret yalnızca VIP kullanıcıları için kullanılabilir",
@@ -140,7 +140,7 @@
   "t_c_title": "Şartlar ve koşullar",
   "m_t_i": "Yaptığımız her şeyde mükemmelliği beklemek, tanımak ve kutlamak",
   "location": "Konum",
-  "privacy_body": "Zipo Aid Investments Limited, sizin hakkınızdaki bilgilerin nasıl kullanıldığını ve paylaşıldığını önemsediğinizi bilir. Dolayısıyla, sağladığınız bilgilerle ilgili gizlilik ilkelerini korumak ve saygı göstermek için güçlü bir taahhütte bulunuyoruz. Bir üye tarafından Zipo Aid Investmentstmentstmentstmentstmentstmentstments Limited'den verilen tüm veriler yalnızca özel olarak kullanılacak ve herhangi bir üçüncü tarafa açıklanmayacaktır. Kişisel bilgilerinizi herhangi bir üçüncü tarafa satmayacak, paylaşmayacak veya kiralamayacağız veya istenmeyen posta için e-posta adresinizi kullanmayacağız. Bu şirket tarafından gönderilen e -postalar yalnızca kararlaştırılan hizmetlerin sağlanmasıyla bağlantılı olacaktır.",
+  "privacy_body": "Zipo Aid Investments Limited, sizin hakkınızdaki bilgilerin nasıl kullanıldığını ve paylaşıldığını önemsediğinizi bilir. Dolayısıyla, sağladığınız bilgilerle ilgili gizlilik ilkelerini korumak ve saygı göstermek için güçlü bir taahhütte bulunuyoruz. Bir üye tarafından Zipo Aid Investments Limited'den verilen tüm veriler yalnızca özel olarak kullanılacak ve herhangi bir üçüncü tarafa açıklanmayacaktır. Kişisel bilgilerinizi herhangi bir üçüncü tarafa satmayacak, paylaşmayacak veya kiralamayacağız veya istenmeyen posta için e-posta adresinizi kullanmayacağız. Bu şirket tarafından gönderilen e -postalar yalnızca kararlaştırılan hizmetlerin sağlanmasıyla bağlantılı olacaktır.",
   "guidance_title": "Rehberlik ve Profesyonel Tavsiye",
   "zipo_user": "Zipo yardım kullanıcısı",
   "forgot_password": "Parolanızı mı unuttunuz?",
