tell me of any bugs

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -184,5 +184,6 @@
   "bitcoin_cash_wallet": "BCH Wallet",
   "cardano_wallet": "ADA Wallet",
   "ripple_wallet": "XRP Wallet",
-  "save": "Save Settings"
+  "save": "Save Settings",
+  "saved_settings": "Saved Settings!"
 }
