--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -1,4 +1,19 @@
 {
+  "russian": "Rusa",
+  "faq2_b": "Bitcoin es 10 $ máximo no tiene límites.",
+  "faq6_b": "Inicie sesión en su cuenta ZipoidinVestments.com y haga clic en la 'Información de la cuenta'. Puede cambiar su dirección de correo electrónico y contraseña allí.",
+  "faq1-t": "Deseo invertir con ZipoidInvestments.com, pero no tengo ninguna cuenta de billetera criptográfica. QUÉ TENGO QUE HACER ?",
+  "faq5_t": "¿Cuánto tiempo tarda en que mi depósito se agrega a mi cuenta?",
+  "faq3_b": "Aceptamos moneda criptográfica como BTC, ETH, USDT (BEP20), etc.",
+  "faq4_b": "Inicie sesión en su cuenta utilizando su nombre de usuario y contraseña y verifique la sección de retiro.",
+  "ukrainian": "Ucrania",
+  "faq2_t": "¿Cuál es las reglas de pago mínimo/máximo?",
+  "faq1-b": "Puede abrir una cuenta de billetera criptográfica gratuita aquí: www.binance.com",
+  "faq4_t": "¿Cómo puedo retirar fondos?",
+  "faq5_b": "Su cuenta se actualizará tan rápido, como depositó.",
+  "faq3_t": "¿Qué billetera criptográfica aceptas?",
+  "faq6_t": "¿Cómo puedo cambiar mi dirección de correo electrónico o contraseña?",
+
   "profile": "Perfil",
   "reliable_2": "Soporte dedicado 24/7",
   "investements": "Inversiones",
