--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -1,4 +1,19 @@
 {
+  "ukrainian": "Ucraniana",
+  "faq1-b": "Você pode abrir uma conta de carteira de criptografia gratuita aqui: www.binance.com",
+  "faq2_t": "Quais são as regras de pagamento mínimo/máximo?",
+  "faq6_t": "Como posso alterar meu endereço de e -mail ou senha?",
+  "faq5_t": "Quanto tempo leva para que meu depósito seja adicionado à minha conta?",
+  "faq2_b": "O Bitcoin é de 10 $ Maximum não tem limites.",
+  "faq1-t": "Desejo investir no ZipoaidInvestents.com, mas não tenho uma conta de carteira de criptografia. O QUE DEVO FAZER ?",
+  "faq4_t": "Como posso retirar fundos?",
+  "faq4_b": "Faça login em sua conta usando seu nome de usuário e senha e verifique a seção de retirada.",
+  "faq5_b": "Sua conta será atualizada o mais rápido, como você depositado.",
+  "russian": "Russa",
+  "faq3_b": "Aceitamos moeda criptográfica como BTC, ETH, USDT (BEP20) e assim por diante ...",
+  "faq3_t": "Qual carteira de criptografia você aceita?",
+  "faq6_b": "Faça login na sua conta ZipoaidInvestents.com e clique nas 'informações da conta'. Você pode alterar seu endereço de e-mail e senha lá.",
+
   "hero_1": "Comprar e negociar no",
   "app_title": "Zipo Aid",
   "247": "Suporte 24/7",
