--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -156,6 +156,20 @@
 "save": "Сохранить настройки",
 "bitcoin_wallet": "BTC Wallet",
 "unlimited": "Неограниченный доступ с нашим веб -мобильным кошельком.",
-"cardano_wallet": "Есть кошелек"
+"cardano_wallet": "Есть кошелек",
+"faq5_b": "Ваша учетная запись будет обновлена так же быстро, как вы депонировали.",
+"faq3_t": "Какой крипто -кошелек вы принимаете?",
+"faq2_b": "Биткойн на 10 $ максимум не имеет ограничений.",
+"faq4_t": "Как я могу снять средства?",
+"faq5_t": "Сколько времени нужно, чтобы мой депозит был добавлен к моей учетной записи?",
+"russian": "Русский",
+"faq3_b": "Мы принимаем криптовалюту, такую как BTC, ETH, USDT (BEP20) и так далее…",
+"faq2_t": "Каковы минимальные/максимальные правила оплаты?",
+"faq1-b": "Вы можете открыть бесплатную учетную запись Crypto Wallet здесь: www.binance.com",
+"ukrainian": "украинец",
+"faq4_b": "Войдите в свою учетную запись, используя свое имя пользователя и пароль и проверьте раздел вывода.",
+"faq6_b": "Войдите в свою учетную запись ZipoaidInvestments.com и нажмите «Информация об учетной записи». Вы можете изменить свой адрес электронной почты и пароль там.",
+"faq6_t": "Как я могу изменить свой адрес электронной почты или пароль?",
+"faq1-t": "Я хочу инвестировать с ZipoaidInvestments.com, но у меня нет никакой учетной записи крипто -кошелька. ЧТО Я ДОЛЖЕН ДЕЛАТЬ ?"
 
 }
