--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -156,5 +156,19 @@
 "tools": "Розширені інструменти торгівлі.",
 "saved_settings": "Збережено налаштування!",
 "mission_body": "Ми є інвестором на світових приватних ринках із сильними торговими корінням та довгим, добре налагодженим досвідом. Ми прагнемо будувати довгострокові відносини з нашими інвесторами, інвестиційними партнерами та колегами на основі довіри, відкритості, поваги та найвищих стандартів доброчесності та професіоналізму.",
-"investment_plans": "Інвестиційні плани"
+"investment_plans": "Інвестиційні плани",
+"faq3_t": "Який криптовалют ви приймаєте?",
+"faq2_b": "Біткойн - 10 $ максимум, не має обмежень.",
+"faq4_t": "Як я можу зняти кошти?",
+"faq1-b": "Ви можете відкрити безкоштовний обліковий запис Crypto Wallet тут: www.binance.com",
+"faq1-t": "Я хочу інвестувати на zipoaidinvestments.com, але у мене немає жодного облікового запису криптовалют. ЩО Я ПОВИНЕН ЗРОБИТИ ?",
+"faq6_b": "Увійдіть у свій обліковий запис zipoaidinvestments.com та натисніть на 'Інформація про обліковий запис'. Ви можете змінити там свою електронну адресу та пароль.",
+"faq4_b": "Увійдіть у свій обліковий запис за допомогою імені користувача та пароля та перевірте розділ зняття.",
+"faq2_t": "Які правила мінімальної/максимальної оплати?",
+"faq5_b": "Ваш рахунок буде оновлено так само швидко, як ви депозили.",
+"russian": "російський",
+"faq6_t": "Як я можу змінити свою електронну адресу чи пароль?",
+"faq5_t": "Скільки часу потрібно, щоб мій депозит був доданий на мій рахунок?",
+"ukrainian": "Український",
+"faq3_b": "Ми приймаємо криптовалюту, таку як BTC, ETH, USDT (BEP20) тощо ..."
 }
