I'll work on alerts next

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -205,5 +205,7 @@
   "faq5_b": "Your account will be updated as fast, as you deposited.",
 
   "faq6_t": "HOW CAN I CHANGE MY EMAIL ADDRESS OR PASSWORD?",
-  "faq6_b": "Login into your zipoaidinvestments.com account and click on the “Account Information”. You can change your e-mail address and password there."
+  "faq6_b": "Login into your zipoaidinvestments.com account and click on the “Account Information”. You can change your e-mail address and password there.",
+
+  "faq_full": "Frequently Asked Questions"
 }
