--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -1,4 +1,5 @@
 {
+  "faq_full": "Preguntas frecuentes",
   "russian": "Rusa",
   "faq2_b": "Bitcoin es 10 $ máximo no tiene límites.",
   "faq6_b": "Inicie sesión en su cuenta ZipoidinVestments.com y haga clic en la 'Información de la cuenta'. Puede cambiar su dirección de correo electrónico y contraseña allí.",
