--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -1,4 +1,5 @@
 {
+  "faq_full": "perguntas frequentes",
   "ukrainian": "Ucraniana",
   "faq1-b": "Você pode abrir uma conta de carteira de criptografia gratuita aqui: www.binance.com",
   "faq2_t": "Quais são as regras de pagamento mínimo/máximo?",
