--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -26,7 +26,7 @@
   "terms_of_service": "Terms Of Service",
   "cert_of_inc": "Certificate Of Incorporation",
   "contact": "Contact",
-  "footer_1": "This website can be accessed worldwide however the information on the website is related to Kale Crypto Investment A/S and is not specific to any entity of miningtrust. All clients will directly engage with miningtrust A/S and all client agreements will be entered into with miningtrust A/S and thus governed by Danish Law.",
+  "footer_1": "This website is founded by a professional group of skillful CryptoCurrency traders as can be accessed worldwide however the information on the website is related to elite venture capital investors. All clients will directly engage with ZIPO AID A/S and all client agreements will be entered into with ZIPO AID A/S and thus governed by Danish Law.",
   "footer_2": "Apple and the Apple logo are trademarks of Apple Inc, registered in the US and other countries and regions. App Store is a service mark of Apple Inc. Google Play and the Google Play logo are trademarks of Google LLC.",
   "copyright": "All rights reserved © 2022 ZipoAid. NMLS #1991139",
 
