--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -207,5 +207,9 @@
   "faq6_t": "HOW CAN I CHANGE MY EMAIL ADDRESS OR PASSWORD?",
   "faq6_b": "Login into your zipoaidinvestments.com account and click on the “Account Information”. You can change your e-mail address and password there.",
 
-  "faq_full": "Frequently Asked Questions"
+  "faq_full": "Frequently Asked Questions",
+
+  "review_1": "I was skeptical about an application of lean sigma to fast paced finance, but my doubts are cleared, where there are variables, there are chances for improvement!",
+  "review_2": "Well, it was never a secret that you can induce profit growth through process, service chain refinement... kudos to the team! It has been a profitable journey",
+  "review_3": "I especially like the customization for robust portfolios"
 }
