--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -1,4 +1,12 @@
 {
+  "review_2": "Ну, ніколи не було секрету, що ви можете викликати зростання прибутку за допомогою процесу, вдосконалення ланцюгів послуг ... Кудо до команди! Це була вигідна подорож",
+ 
+
+  "review_1": "Я скептично ставився до застосування Lean Sigma для швидких темпів фінансів, але мої сумніви очищені, де є змінні, є шанси на вдосконалення!",
+  "review_3": "Мені особливо подобається налаштування для надійних портфелів",
+  
+  
+  
   "faq_full": "Питання що часто задаються",
   "invest_now": "Інвестувати зараз",
   "sign_in": "Увійти",
