--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,7 @@
 {
+  "review_1": "Я скептически относился к применению Lean Sigma к быстрому финансированию, но мои сомнения очищены, где есть переменные, есть шансы на улучшение!",
+  "review_2": "Что ж, это никогда не было секретом, что вы можете вызвать рост прибыли посредством процесса, уточнения цепочки услуг ... слава команде! Это было прибыльное путешествие",
+  "review_3": "Мне особенно нравится настройка для надежных портфелей",
   "faq_full": "Часто задаваемые вопросы",
   "app_title": "Zipo Aid",
   "register": "регистр",
