--- a/public/locales/tr/translation.json
+++ b/public/locales/tr/translation.json
@@ -1,4 +1,8 @@
 {
+  "review_1": "Yalın Sigma'nın hızlı tempolu finansa uygulanması konusunda şüpheliydim, ancak şüphelerim temizlendi, değişkenlerin olduğu yerde iyileşme şansı var!",
+  "review_2": "Süreç, hizmet zinciri iyileştirme yoluyla kâr büyümesini teşvik edebileceğiniz bir sır değildi ... takıma kudos! Karlı bir yolculuktu",
+  "review_3": "Özellikle sağlam portföyler için özelleştirmeyi seviyorum",
+
   "faq_full": "Sıkça Sorulan Sorular",
   "welcome": "Zipo-Aid'e hoş geldiniz",
   "contact": "İletişim",
