--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -1,4 +1,6 @@
 {
+  "country": "País",
+  "region": "Región",
   "review_1": "Era escéptico acerca de una aplicación de Lean Sigma a finanzas de ritmo rápido, pero mis dudas se despejan, donde hay variables, ¡hay posibilidades de mejorar!",
   "review_3": "Me gusta especialmente la personalización para carteras robustas",
   "review_2": "Bueno, nunca fue un secreto que puede inducir el crecimiento de las ganancias a través del proceso, el refinamiento de la cadena de servicio ... ¡felicitaciones al equipo! Ha sido un viaje rentable",
