--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -1,4 +1,6 @@
 {
+  "country": "País",
+  "region": "Região",
   "faq_full": "perguntas frequentes",
   "ukrainian": "Ucraniana",
   "faq1-b": "Você pode abrir uma conta de carteira de criptografia gratuita aqui: www.binance.com",
