--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -70,8 +70,7 @@
   "ease_3": "Retirar fondos a cualquier otra billetera",
   "transfer": "Transferir {{cantidad}} {{name}} a {{dirección}}",
   "contact_us": "Contáctenos",
-  "footer_1": "Se puede acceder a este sitio web en todo el mundo, sin embargo, la información en el sitio web está relacionada con Kale Crypto Investment A/S y no es específica de ninguna entidad de MiningTrust. Todos los clientes se involucrarán directamente con MiningTrust A/S y todos los acuerdos de los clientes se celebrarán con MiningTrust A/S y, por lo tanto, se gobierna por la ley danesa.",
-  "investment": "Inversión activa",
+  "footer_1": "Este sitio web es fundado por un grupo profesional de hábiles comerciantes de criptomonedas, como se puede acceder en todo el mundo, sin embargo, la información en el sitio web está relacionada con los inversores de capital de riesgo de élite. Todos los clientes se involucrarán directamente con Zipo Aid A/S y todos los acuerdos de los clientes se celebrarán con Zipo Aid A/S y, por lo tanto, gobernan por la ley danesa.",  "investment": "Inversión activa",
   "m_t_e": "Ser un socio de confianza, colaborativo y a largo plazo",
   "mission_title_2": "Seremos un socio de inversión preferido por:",
   "interest": "Interés",
