--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -45,8 +45,7 @@
   "welcome_user": "Bem-vindo",
   "ease": "Facilidade de negociação",
   "contact_us": "Contate-nos",
-  "footer_1": "Este site pode ser acessado em todo o mundo, no entanto, as informações no site estão relacionadas ao investimento em criptografia de couve A/S e não são específicas para nenhuma entidade da mineração. Todos os clientes se envolverão diretamente com a mineração A/S e todos os acordos de clientes serão celebrados com a mineração A/se e, portanto, governados pela lei dinamarquesa.",
-  "faqs": "Perguntas frequentes",
+  "footer_1": "Este site é fundado por um grupo profissional de comerciantes de criptomoedas hábeis, como pode ser acessado em todo o mundo, no entanto, as informações no site estão relacionadas aos investidores de capital de risco de elite. Todos os clientes se envolverão diretamente com o ZIPO AID A/S e todos os acordos de clientes serão celebrados com AID ZIPO A/S e, portanto, governados pela lei dinamarquesa.",  "faqs": "Perguntas frequentes",
   "l_name": "Sobrenome",
   "m_t_i": "Esperando, reconhecendo e celebrando a excelência em tudo o que fazemos",
   "about_us": "Sobre nós",
