--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -29,7 +29,7 @@
   "pro_trading": "Профессиональная торговля",
   "begin": "Для начала создайте свою учетную запись",
   "crypto": "Криптовалюта",
-  "footer_1": "Доступ к этому веб -сайту можно получить по всему миру, однако информация на веб -сайте связана с крипто -инвестициями в кале A/S и не соответствует какой -либо организации Miningtrust. Все клиенты будут непосредственно взаимодействовать с Miningtrust A/S, и все соглашения клиентов будут заключены с Miningtrust A/S и, таким образом, регулируются датским законодательством.",
+  "footer_1": "Этот веб -сайт основан на профессиональной группе умелых трейдеров криптовалюты, как можно получить доступ по всему миру, однако информация на веб -сайте связана с Elite Venture Capital Investors. Все клиенты будут непосредственно взаимодействовать с Zipo Aid A/S, и все соглашения клиентов будут заключены с помощью Zipo Aid A/S и, следовательно, регулируемой датским законодательством.",
   "profile": "Профиль",
   "investment_history": "История инвестиций",
   "f_name": "Имя",
