--- a/public/locales/tr/translation.json
+++ b/public/locales/tr/translation.json
@@ -41,8 +41,7 @@
   "f_name": "İlk adı",
   "spanish": "İspanyol",
   "portuguese": "Portekizce",
-  "footer_1": "Bu web sitesine dünya çapında erişilebilir, ancak web sitesindeki bilgiler Kale Crypto Investment A/S ile ilgilidir ve MiningTrust'un herhangi bir kuruluşuna özgü değildir. Tüm müşteriler doğrudan MiningTrust A/S ile etkileşime girecek ve tüm müşteri anlaşmaları MiningTrust A/S ile girilecek ve böylece Danimarka Yasası tarafından yönetilecektir.",
-  "english": "ingilizce",
+  "footer_1": "Bu web sitesi, dünya çapında erişilebileceği gibi profesyonel bir yetenekli kripto para tüccarları tarafından kurulmuştur, ancak web sitesindeki bilgiler elit risk sermayesi yatırımcıları ile ilgilidir. Tüm müşteriler doğrudan Zipo Aid A/S ile etkileşime girecek ve tüm müşteri anlaşmaları Zipo Aid A/S ile girilecek ve böylece Danimarka Yasası tarafından yönetilecektir.",  "english": "ingilizce",
   "footer_2": "Apple ve Apple logosu, ABD ve diğer ülkelere ve bölgelere kayıtlı Apple Inc'in ticari markalarıdır. App Store, Apple Inc.'in bir hizmet işaretidir. Google Play ve Google Play logosu Google LLC'nin ticari markalarıdır.",
   "hero_body": "ZIPO AID Yatırım Tüccarı, dünyanın dört bir yanındaki müşterilerimize güvenilir, tutarlı ve karlı mali yardım sağlar. Ticaret platformlarımıza yapılan yatırımlar, daha iyi risk yönetimi ve karlı ticaret sağlamak için yalnızca deneyimli tüccarlarımız tarafından güvenli bir şekilde güvence altına alınır ve yönetilir.",
   "advanced_body": "Yüksek likidite, güvenilir sipariş yürütme ve sürekli çalışma süresi yoluyla hem bireyler hem de kurumlar için kripto ticaretine premium erişim sağlıyoruz.",
