--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -34,7 +34,7 @@
   "about_1": "Інвестиційний торговець Zipo Aid надає надійну, послідовну та вигідну фінансову допомогу для наших клієнтів у всьому світі. Інвестиції в наші торгові платформи надійно забезпечуються та керуються лише нашими досвідченими торговцями для забезпечення кращого управління ризиками та вигідної торгівлі.",
   "f_name": "Ім'я",
   "turkish": "Турецький",
-  "footer_1": "До цього веб -сайту можна отримати доступ у всьому світі, однак інформація на веб -сайті пов'язана з криптовалютою Crale Crypto Investment A/S і не є специфічною для будь -якої організації MiningTrust. Усі клієнти безпосередньо будуть взаємодіяти з MiningTrust A/S, і всі домовленості про клієнта будуть укладені з MiningTrust A/S і, таким чином, керуються датським законодавством.",
+  "footer_1": "Цей веб -сайт заснований професійною групою вмілих торговців криптовалютами, як можна отримати доступ у всьому світі, проте інформація на веб -сайті пов'язана з інвесторами Elite Venture Capital. Усі клієнти безпосередньо взаємодіють із Zipo Aid A/S, і всі домовленості про клієнта будуть укладені за допомогою A/S Aid A/S і, таким чином, керуються датським законодавством.",
   "legal": "Юридичний",
   "hero_body": "Інвестиційний торговець Zipo Aid надає надійну, послідовну та вигідну фінансову допомогу для наших клієнтів у всьому світі. Інвестиції в наші торгові платформи надійно забезпечуються та керуються лише нашими досвідченими торговцями для забезпечення кращого управління ризиками та вигідної торгівлі.",
   "steps_3_btn": "Про торгівля",
